name:                a171
version:             0.1.0.0
author:              Andreas Ekeroot
license:             MIT
license-file:        LICENSE
maintainer:          andeke@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable a171
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
                     , vector >=0.12 && <0.13
  -- hs-source-dirs:
  default-language:    Haskell2010
