name:                a175
build-type:          Simple
cabal-version:       >=1.10
version:             666

executable a171
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.9 && <4.10
                     , vector >=0.12 && <0.13
  -- hs-source-dirs:
  default-language:    Haskell2010
